# NotiCo

./: .dockerignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  cdk.json  cdk.py  pyproject.toml
frontend/: .env.production  eslint.config.js  index.html  package.json  pnpm-lock.yaml  tsconfig.app.json  vite.config.ts
frontend/src/: main.tsx  vite-env.d.ts
frontend/src/components/: sidebar.tsx
frontend/src/consts/: application.ts
frontend/src/hooks/: useAPIs.ts
frontend/src/models/: api.ts  context.ts
frontend/src/pages/: home.tsx  index.tsx  sendManager.tsx  templateManager.tsx
frontend/src/utils/: error.ts
runtime/: app.py
runtime/.chalice/: config.json
runtime/chalicelib/: aws_resource.py  config.py
runtime/chalicelib/external_api/: __interface__.py  telegram_botmessaging.py  toast_alimtalk.py
runtime/chalicelib/logger/slack/: __init__.py  block.py  formatter.py  handler.py
runtime/chalicelib/route/: __init__.py  health_check.py  index.py  send_manager.py  template_manager.py
runtime/chalicelib/send_manager/: __init__.py  __interface__.py  aws_ses.py  telegram_botmessaging.py  toast_alimtalk.py
runtime/chalicelib/sender/: __init__.py  __interface__.py  aws_ses.py  firebase_cloudmessaging.py  google_gmail.py  send_notification.py  toast_alimtalk.py
runtime/chalicelib/template_manager/: __init__.py  __interface__.py  aws_ses.py  firebase_cloudmessaging.py  telegram_botmessaging.py  toast_alimtalk.py
runtime/chalicelib/template_manager/preview/: aws_ses.html  telegram_botmessaging.html  toast_alimtalk.html
runtime/chalicelib/util/: chalice_util.py  decorator_util.py  import_util.py  jinja_util.py  type_util.py
runtime/chalicelib/worker/: __init__.py  google_gmail.py  notification_sender.py  test_worker.py  toast_alimtalk.py
