[tool.poetry]
name = "notico"
version = "0.1.0"
description = ""
authors = ["MU-Software <musoftware@mudev.cc>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
boto3 = "^1.35.44"
chalice = {extras = ["cdkv2"], version = "^1.31.2"}
firebase-admin = "^6.5.0"
httpx = "^0.27.2"
pydantic = {extras = ["email"], version = "^2.9.2"}
pydantic-settings = "^2.6.0"


[tool.poetry.group.dev.dependencies]
pre-commit = "^4.0.1"
pylint = "^3.3.1"
flake8 = "^7.1.1"
mypy = "^1.12.0"
black = "^24.10.0"
bandit = "^1.7.10"
isort = "^5.13.2"
refurb = "^2.0.0"
flake8-noqa = "^1.4.0"
flake8-bugbear = "^24.8.19"
boto3-stubs = {extras = ["essential", "ses"], version = "^1.35.44"}
pytest = "^8.3.3"
ipython = "^8.28.0"
aws-cdk-lib = "^2.162.1"
constructs = "^10.4.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
